testData/annotator/InvalidPackage/InvalidPackageTestDataFixed.secarc
package InvalidPackage;

component A {

    accesscontrol on;
}